@@ -2,6 +2,8 @@ mbt version 3.2.6 2011-04-xx
 
 * addded Version() and VersionName() functions to be consistent withe the 
   whole Timbl family.
+* added an isInit() function to the API
+* fixed terrible bug. -vdb option was broken (a long time ago?)
 
 mbt version 3.2.5 2011-03-21
 - decapped version. so Mbt ==> mbt and Mbtg ==> mbtg, also for libMbt
